test/tests/bad/cast-mono.carth
;; NoClassInstance

(define: (foo a)
    (Fun Int (Box Nat8))
  (cast a))
